调整目录结构

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "today-eos-how-much",
   "chromium-args": "--mixed-context",
-  "main": "main.js",
+  "main": "js/main.js",
   "nodejs": "true"
 }
